Fixed stats width issue. stats no longer overflow off the viewport.

--- a/src/stats/Stats.scss
+++ b/src/stats/Stats.scss
@@ -4,6 +4,7 @@
 .stats-container {
     @include flexbox(flex, column, flex-start, flex-start);
     height: calc(95vh - 2.5rem);
+    width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
     
